<resources>
    <string name="app_name">UMU</string>
    <string name="ServURL">https://api.urnik.td-fl.org</string>

    <string name="ContactMail">https://urnik.td-fl.org/</string>
    <string name="AboutProject"> UMU je samostojni projekt, ki ponuja rešitev fleksibilnega prikaza urnikov celotne Univerze v Mariboru. Za napačne ali nepopolne podatke urnika ne odgovarjamo.  </string>
    <string name="Authors">Avtorja: \nDomen Jesenovec \nLuka Koprivc</string>
    <string name="NoData"> Manjkajoči podatki! Poizkusite ponovno kasneje!</string>

    <string name="ChooseFaculty">Izberi fakulteto</string>
    <string name="ChooseClass">Izberi predmet</string>
    <string name="ChooseProfessor">Izberi profesorja</string>
    <string name="ChooseProgramme">Izberi program</string>
    <string name="ChooseYear">Izberi letnik</string>
    <string name="ChooseDate">Izberi datum</string>
    <string name="Settings">Nastavitve</string>
    <string name="About">O projektu</string>
    <string name="Next">Nadaljuj</string>

    <string name="Handler">Izvajalec</string>
    <string name="Type">Tip</string>
    <string name="Programme">Program</string>
    <string name="Group">Skupina</string>
    <string name="Location">Lokacija</string>
    <string name="StartTime">Pričetek</string>
    <string name="EndTime">Konec</string>
    <string name="Export">Izvozi</string>


    <string name="ByProgramme">Po programu</string>
    <string name="ByProfessor">Po profesorju</string>
    <string name="ByCourse">Po predmetu</string>

    <string name="ErrorRefresh">Napaka pri osveževanju, preverite povezavo in ponovno odprite aplikacijo!</string>
    <string name="ErrorLoad">Napaka pri povezovanju, preverite povezavo in ponovno odprite aplikacijo!</string>

    <string name="FilterGroups">Izberi skupine</string>
    <string name="FilterCourses">Izberi predmete</string>
    <string name="FilterTypes">Izberi tipe</string>

    <string name="ChooseLanguage">Nastavi jezik</string>
    <string name="DarkMode">Temni način  </string>
    <string name="GoneEvents">Prikaži minule dogodke</string>

    <string name="AboutProjectTitle">O projektu</string>

    <string name="Warning">Opozorilo!</string>
    <string name="Agreed">Strinjam se</string>
    <string name="Exit">Izhod</string>
    <string name="Disclaimer">Aplikacija je neodvisen samostojni projekt. Za napačne ali nepopolne podatke urnika ne odgovarjamo. Uporabna na lastno odgovornost!</string>
    <string name="Save">Shrani</string>
    <string name="Cancel">Prekliči</string>
    <string name="Choose">Izberi</string>

    <string name="Courses">Predmete</string>
    <string name="Groups">Skupine</string>
    <string name="Types">Tip</string>

    <string-array name="Days">
        <item>NEDELJA</item>
        <item>PONEDELJEK</item>
        <item>TOREK</item>
        <item>SREDA</item>
        <item>ČETRTEK</item>
        <item>PETEK</item>
        <item>SOBOTA</item>
    </string-array>

    <string-array name="Languages">
        <item>Slovenščina</item>
        <item>Angleščina</item>
    </string-array>



</resources>
