<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/background"
    android:elevation="5dp"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_turned_in"
        android:drawablePadding="12dp"
        android:drawableTint="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/Type"
        android:textColor="@color/textcolorprimary" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_school"
        android:drawablePadding="12dp"
        android:drawableTint="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/Programme"
        android:textColor="@color/textcolorprimary" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_group"
        android:drawablePadding="12dp"
        android:drawableTint="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/Group"
        android:textColor="@color/textcolorprimary" />




        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/Handler"
            android:textColor="@color/textcolorprimary" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/Location"
            android:textColor="@color/textcolorprimary" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_hourglass"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/StartTime"
            android:textColor="@color/textcolorprimary" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_hourglass_empty"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/EndTime"
            android:textColor="@color/textcolorprimary" />

    <Button
        android:id="@+id/exportButton"
        style="@style/MaterialButtonCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Export"
        app:icon="@drawable/ic_arrow_forward" />


</LinearLayout>