<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:ignore="missingPrefix">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:gravity="start|center"
        android:text="@string/Choose"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSelectPredm"
        style="@style/MaterialButtonCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Courses"
        app:icon="@drawable/ic_school" />

    <Button
        android:id="@+id/buttonSelectSkup"
        style="@style/MaterialButtonCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Groups"
        app:icon="@drawable/ic_group" />

    <Button
        android:id="@+id/buttonSelectTip"
        style="@style/MaterialButtonCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Types"
        app:icon="@drawable/ic_turned_in" />


</LinearLayout>